In Clippings Manager, Linux-specific option to minimize when inactive should be turned OFF by default (issue #464)
- On first run, turn on status bar with mode icon in Clippings Manager
- Allow double-click on status bar mode icon to quickly toggle Minimize When Inactive

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -968,6 +968,25 @@ ul.fancytree-container {
     text-align: left;
 }
 
+#minz-when-inactv-mode {
+    display: none;
+    
+    border-left: 1px solid silver;
+    margin-right: 8px;
+    text-align: right;
+
+    background-image: url("../img/auto-minimize-on.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 12px 12px;
+    width: 24px;
+    height: 16px;
+}
+
+#minz-when-inactv-mode[data-checked="false"] {
+    background-image: url("../img/auto-minimize-off.svg");
+}
+
 
 /*
  * Dialog boxes
